/*
in the course the file is duplicated in every module the billing service is used
i decided to put this configuration in separate module, compile it here and use everywhere it is needed
 */

syntax = "proto3";

package com.pm.contract.billing;
option java_multiple_files = true;

service BillingService {
  rpc CreateBillingAccount (BillingRequest) returns (BillingResponse);
}

message BillingRequest {
  string patientId = 1;
  string name = 2;
  string email = 3;
}

message BillingResponse {
  string accountId = 1;
  string status = 2;
}